added SO tag evaluation

--- a/notebook/preview_so_embeddings.ipynb
+++ b/notebook/preview_so_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,25 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('(java', 0.7260007262229919),\n",
-       " ('java)', 0.6247530579566956),\n",
-       " ('(java)', 0.6221721768379211),\n",
-       " ('jdk', 0.6162505149841309),\n",
-       " ('swing', 0.5842597484588623),\n",
-       " (\"java's\", 0.583393931388855),\n",
-       " ('eclipse', 0.5775796175003052),\n",
-       " ('netbeans', 0.5340868234634399),\n",
-       " ('jvm', 0.5317947864532471),\n",
-       " ('scala', 0.5219969749450684)]"
+       "[(\"java's\", 0.5935564041137695),\n",
+       " ('jdk', 0.5905563235282898),\n",
+       " ('swing', 0.5787304639816284),\n",
+       " ('eclipse', 0.5614255666732788),\n",
+       " ('jvm', 0.541899561882019),\n",
+       " ('groovy', 0.5220783948898315),\n",
+       " ('netbeans', 0.5132842659950256),\n",
+       " ('jar', 0.5042675733566284),\n",
+       " ('scala', 0.4976651668548584),\n",
+       " ('applet', 0.4954228103160858)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,25 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('testing', 0.6772710084915161),\n",
-       " ('tests', 0.6694512367248535),\n",
-       " ('junit', 0.6379056572914124),\n",
-       " ('ju', 0.6328686475753784),\n",
-       " ('run', 0.5729539394378662),\n",
-       " ('cases', 0.5531142950057983),\n",
-       " ('case', 0.5485044121742249),\n",
-       " ('<allcaps>nit', 0.547356128692627),\n",
-       " ('i', 0.5442484617233276),\n",
-       " ('written', 0.542914867401123)]"
+       "[('junit', 0.6811604499816895),\n",
+       " ('testing', 0.6806052327156067),\n",
+       " ('tests', 0.6777591705322266),\n",
+       " ('cases', 0.5550381541252136),\n",
+       " ('wrote', 0.5482021570205688),\n",
+       " ('run', 0.5480926036834717),\n",
+       " ('written', 0.5424278974533081),\n",
+       " ('case', 0.5283039212226868),\n",
+       " ('i', 0.5224477052688599),\n",
+       " ('writing', 0.5186957716941833)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pytest'"
+       "'unittest'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "'keras'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'lstm'"
+       "'cnn'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,27 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'python3'"
+       "'unittest'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "analogy(vk_model,'java','junit','python')"
+    "analogy(model,'java','junit','python')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "'dl4j'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        " ('testing', 0.5359343886375427)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,18 +262,18 @@
        "'pycharm'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "analogy(vk_model,'java','eclipse','python')"
+    "analogy(model,'java','eclipse','python')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,13 +290,42 @@
        "'bash'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.doesnt_match(\"java c++ python bash\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('python3', 0.7936046719551086),\n",
+       " (\"python's\", 0.6668739318847656),\n",
+       " ('pandas', 0.592261791229248),\n",
+       " ('pycharm', 0.5707339644432068),\n",
+       " ('numpy', 0.5608341693878174),\n",
+       " ('multiprocessing', 0.5575698614120483),\n",
+       " ('django', 0.5411977171897888),\n",
+       " ('flask', 0.5332773923873901),\n",
+       " ('pip', 0.5331385135650635),\n",
+       " ('interpreter', 0.5276260375976562)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(positive=['python'])"
    ]
   },
   {
